# metacity-decor

./: README.md  meson.build
assets/: meson.build
metadata/: meson.build  metacity-decor.xml
src/: meson.build  metacity-decor.cpp  nonstd.hpp  theme-parser.c  theme.c  theme.h
